--- a/report/references.bib
+++ b/report/references.bib
@@ -148,3 +148,37 @@
 	note={Accessed on: 2023-02-08}
 }
 
+@article{Żarkowski_2019, 
+	title={Multi-party Turn-Taking in Repeated Human–Robot Interactions: An Interdisciplinary Evaluation}, 
+	volume={11}, 
+	ISSN={1875-4805}, 
+	DOI={10.1007/s12369-019-00603-1}, 
+	abstractNote={As social robots become more popular, so arises the need for these social agents to operate in environments involving multiple users. The robot control systems that govern these multi-party interactions require to be evaluated both from the technical and social standpoints. This paper presents the methodology, setup and results for experiment involving the social robot EMYS participating in multi-party interaction where pairs of participants interacted with the robot in a trivia questions game lead by the robot . In total 32 people, 16 pairs, interacted with the robot twice, which resulted in 32 interactions and 64 filled questionnaires. The developed robot’s multi-party interaction system was evaluated both in terms of performance and user assessment. The results show that the robot adhering to human turn-taking social norms reduced the number of occurring conversational errors, which improved the communicative performance from $$51.5%$$ to $$80.5%$$, in addition, it made the robot perceived as more communicative, cooperative and fitting user expectations by up to 3 points on a 7 point scale. In addition, the study on repeated interactions revealed that user perception of the robot is affected by subsequent interactions, which can be of consequence in future experiments. This first impression caused lasting effect between 1 and 2 points on user assessment of several robot’s aspects, even when contradicted by objective performance measurement of the robot’s actual behavior.}, 
+	number={5}, 
+	journal={International Journal of Social Robotics}, 
+	author={Żarkowski, Mateusz}, 
+	year={2019}, 
+	month={Dec}, 
+	pages={693–707}, 
+	language={en} 
+}
+
+@inproceedings{Johansson_Skantze_2015, 
+	address={Prague, Czech Republic}, 
+	title={Opportunities and Obligations to Take Turns in Collaborative Multi-Party Human-Robot Interaction}, 
+	url={https://aclanthology.org/W15-4642},
+	DOI={10.18653/v1/W15-4642},
+	booktitle={Proceedings of the 16th Annual Meeting of the Special Interest Group on Discourse and Dialogue},
+	publisher={Association for Computational Linguistics},
+	author={Johansson, Martin and Skantze, Gabriel},
+	year={2015},
+	month={Sep},
+	pages={305–314} 
+}
+
+@misc{Group_1_unpublished_paper,
+	url={https://heriotwatt.sharepoint.com/sites/F20DV-CollaborativeQuizProject/Shared%20Documents/Forms/AllItems.aspx?FolderCTID=0x012000C31DB7E9EEFD0240A1EA2B93F809CD1B&id=%2Fsites%2FF20DV%2DCollaborativeQuizProject%2FShared%20Documents%2FGeneral%2Faddlesee%2Diwsds%2Dmpc%2Epdf&parent=%2Fsites%2FF20DV%2DCollaborativeQuizProject%2FShared%20Documents%2FGeneral}, 
+	year={2023}, 
+	author={Angus Addlesee and Weronika Sieinska and Nancie Gunson and Daniel Hernández García and Christian Dondrup and Oliver Lemon}
+}
+
