Reformat and fixing transcripts, added stories

--- a/test_data_formatting.ipynb
+++ b/test_data_formatting.ipynb
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of annotated transcripts: 14\n",
+      "Number of annotated transcripts: 12\n",
       "Annotated Transcripts:\n",
       " - transcript_1.txt\n",
       " - transcript_10.txt\n",
@@ -40,9 +40,7 @@
       " - transcript_54.txt\n",
       " - transcript_56.txt\n",
       " - transcript_74.txt\n",
-      " - transcript_100.txt\n",
-      " - transcript_101.txt\n",
-      " - transcript_102.txt\n"
+      " - transcript_100.txt\n"
      ]
     }
    ],
@@ -87,20 +85,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Filtering and Sorting Different Annotations  \n",
-    "\n",
+    "## Filtering and Sorting Different Annotations  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Possible Annotations:**  \n",
-    "Robot to Users (only use these four for the robot + possibly [chit-chat]):  \n",
+    "Robot to Users (only use these four for the robot + possibly [chit-chat]):\n",
     "- _[question]_: Robot asking the question\n",
     "- _[options]_: Robot giving the answer options to the question\n",
     "- _[accept-answer]_: Robot confirming that it has received the answer\n",
     "- _[confirm-agreement]_: Robot asks if the users have agreed, eg. \"Final answer?\" \n",
     "\n",
-    "User to Robot: \n",
+    "User to Robot:\n",
     "- [final-answer()]: A user offering the final answer to the host (as opposed to the other person)\n",
     "- [confirm-final-answer()]: A user confirms to the robot that it is the final answer they want to submit \n",
     "\n",
-    "User to User: \n",
+    "User to User\n",
     "- [offer-answer()]: One of the users offers a specific answer to the other user\n",
     "- [offer-to-answer]: One of the users says that they would like to answer (without providing a specific answer), eg. \"I think I know this one\" \n",
     "- [check-answer]: A user checks if the other user knows the answer, eg. \"You know this, right?\"\n",
@@ -113,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,8 +153,10 @@
     "        # Remove the user and system tags\n",
     "        if (line[0] == 'S'):\n",
     "            line = line[3:]\n",
+    "            system = True\n",
     "        elif (line[0] == 'U'):\n",
     "            line = line[4:]\n",
+    "            system = False\n",
     "        else:\n",
     "            continue\n",
     "\n",
@@ -173,6 +178,8 @@
     "        elif (annotation == \"ask-agreement\"):\n",
     "            ask_agreement.append(line[:line.find(\"[\") - 1])\n",
     "        elif (annotation == \"chit-chat\"):\n",
+    "            if (system):\n",
+    "                continue\n",
     "            chit_chat.append(line[:line.find(\"[\") - 1])\n",
     "        elif (annotation == \"accept-answer\"):\n",
     "            accept_answer.append(line[:line.find(\"[\") - 1])\n",
@@ -211,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,12 +300,77 @@
     "\n",
     "    # For every line in the transcript\n",
     "    for line in file:\n",
+    "        # Remove the user and system tags\n",
+    "        if (line[0] == 'S'):\n",
+    "            line = line[3:]\n",
+    "            system = True\n",
+    "        elif (line[0] == 'U'):\n",
+    "            line = line[4:]\n",
+    "            system = False\n",
+    "        else:\n",
+    "            continue\n",
+    "\n",
     "        # Extract the annotation\n",
     "        annotation = line[line.find(\n",
     "            '['):line.find(']') + 1].replace(\" \", \"\")[1:-1]\n",
+    "        \n",
+    "        if (annotation == \"question\"):\n",
+    "            stories.append([annotation])\n",
+    "        else:\n",
+    "            if (annotation == \"chit-chat\" and system):\n",
+    "                continue\n",
+    "            stories[(len(stories) - 1)].append(annotation)\n",
     "    \n",
     "    # Cleanup\n",
     "    file.close()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Writing the Stories into a YAML File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a new file and add the proper formatting to the beginning\n",
+    "file = open(\"./RASA_Training_Data/stories.txt\", \"w\")\n",
+    "file.write(\"version: \\\"3.1\\\"\\n\\nstories:\\n\")\n",
+    "\n",
+    "pathNumber = 1\n",
+    "for path in stories:\n",
+    "    file.write(\"- story: path \" + str(pathNumber) + \"\\n  steps:\\n\")\n",
+    "    pathNumber += 1\n",
+    "\n",
+    "    for annotation in path:\n",
+    "        if (annotation == \"\"):\n",
+    "            continue\n",
+    "\n",
+    "        if (annotation == \"question\" or annotation == \"options\" or annotation == \"accept-answer\" or annotation == \"confirm-agreement\"):\n",
+    "            system = True\n",
+    "        else:\n",
+    "            system = False\n",
+    "\n",
+    "        if (annotation.find(\"(\") == -1):\n",
+    "            if (not system):\n",
+    "                file.write(\"  - intent: \" + annotation + \"\\n\")\n",
+    "            else:\n",
+    "                file.write(\"  - action: utter_\" + annotation + \"\\n\")\n",
+    "        else:\n",
+    "            answer = annotation[annotation.find('(') + 1:annotation.find(')')]\n",
+    "            annotation = annotation[:annotation.find('(')]\n",
+    "            file.write(\"  - intent: \" + annotation +\n",
+    "                       \"\\n    entities:\\n    - answer: \\\"\" + answer + \"\\\"\\n\")\n",
+    "\n",
+    "    file.write(\"\\n\")\n",
+    "\n",
+    "file.close()\n"
    ]
   }
  ],
