Added new NLU model and stopped including chit-cha

--- a/test_data_formatting.ipynb
+++ b/test_data_formatting.ipynb
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of annotated transcripts: 20\n",
+      "Number of annotated transcripts: 21\n",
       "Annotated Transcripts:\n",
       " - transcript_1.txt\n",
       " - transcript_10.txt\n",
@@ -35,6 +35,7 @@
       " - transcript_22.txt\n",
       " - transcript_23.txt\n",
       " - transcript_24.txt\n",
+      " - transcript_25.txt\n",
       " - transcript_34.txt\n",
       " - transcript_35.txt\n",
       " - transcript_44.txt\n",
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,8 +239,8 @@
     "    offer_to_answer,\n",
     "    check_answer,\n",
     "    agreement,\n",
-    "    ask_agreement,\n",
-    "    chit_chat\n",
+    "    ask_agreement\n",
+    "    # chit_chat\n",
     "]\n",
     "\n",
     "# Annotations without inputs\n",
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
