edited what intents are included in training

--- a/test_data_formatting.ipynb
+++ b/test_data_formatting.ipynb
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of annotated transcripts: 21\n",
+      "Number of annotated transcripts: 22\n",
       "Annotated Transcripts:\n",
       " - transcript_1.txt\n",
       " - transcript_10.txt\n",
@@ -49,6 +49,7 @@
       " - transcript_88.txt\n",
       " - transcript_99.txt\n",
       " - transcript_100.txt\n",
+      " - transcript_103.txt\n",
       " - transcript_114.txt\n"
      ]
     }
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,8 +249,8 @@
     "    offer_answer,\n",
     "    final_answer,\n",
     "    confirm_final_answer,\n",
-    "    reject_option,\n",
-    "    reject_option_agreement\n",
+    "    reject_option\n",
+    "    #reject_option_agreement\n",
     "]\n",
     "\n",
     "# Create a new file and add the proper formatting to the beginning\n",
@@ -295,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
