adds structure of report

--- a/report/report.tex
+++ b/report/report.tex
@@ -43,7 +43,7 @@ School of Mathematics and Computer Science, Heriot-Watt University, Edinburgh \\
 \begin{document}
 \maketitle
 \begin{abstract}
-  This should be a 6-8 page conference paper with appendices, if relevant. 
+  This should be a 6-8 page conference paper with appendices, if relevant.
 \end{abstract}
 
 
@@ -53,7 +53,7 @@ School of Mathematics and Computer Science, Heriot-Watt University, Edinburgh \\
 \textit{from coursework spec:} main research or technical question addressed \\
 Socially assistive robots (SARs) are a crucial part of the future of many sectors, for example, in education or healthcare \cite{gunson_visually_aware_2022}. Especially the latter depends on technology advancements as it is facing numerous obstacles in the future, such as increasing spendings and a growing percentage of older people. A serious lack of healthcare workers is already occurring, with 10 million more healthworkers needed worldwide by 2030 \cite{cooper_ari_2020,Health_workforce_2023}. SARs can pose a solution to the problem, as they are able to support healthcare in various ways, such as encouraging older people to keep living independently for longer or reducing caregiver burden \cite{cooper_ari_2020}.
 
-These scenarios require SARs to be able to handle multi-party interactions as it is likely that more than one person will interact with the system. Compared to handling dyadic interactions, handling multi-party conversations includes more complex challenges, such as Speaker Recognition, Addressee Recognition, Response Selection (summarised in “who says what to whom“) and turn-taking \cite{Group_1_unpublished_paper,Johansson_Skantze_2015}. 
+These scenarios require SARs to be able to handle multi-party interactions as it is likely that more than one person will interact with the system. Compared to handling dyadic interactions, handling multi-party conversations includes more complex challenges, such as Speaker Recognition, Addressee Recognition, Response Selection (summarised in “who says what to whom“) and turn-taking \cite{Group_1_unpublished_paper,Johansson_Skantze_2015}.
 
 \textit{Include here what exactly we examined about turn-taking}
 
@@ -75,7 +75,7 @@ The SPRING project conducts research on a SAR robot that is deployed in an elder
 
 \subsection{Multi-party Human Robot Interaction}
 \label{subsec:multi_party}
-As stated above, the endeavour to create conversational systems becomes considerably more difficult when dealing with multi-party interactions \cite{Group_1_unpublished_paper}. Especially turn-taking poses a central problem. It is defined as follows: 
+As stated above, the endeavour to create conversational systems becomes considerably more difficult when dealing with multi-party interactions \cite{Group_1_unpublished_paper}. Especially turn-taking poses a central problem. It is defined as follows:
 
 \begin{quote}
   The rules of turn-taking organize the conversation into turns, during which one of the participants has the right to speak while the others agree to listen \cite{Żarkowski_2019}
@@ -86,15 +86,23 @@ In dyadic conversations, there are only two roles a participant can take: speake
 \textit{State exactly the gap that we will fill - whatever that will be}
 
 
+\section{Data Collection}
+\label{sec:data_collection}
+\textit{Talk about multi-party data collection -> lack of human-robot multi-party data corpus?}
 
 \section{Design and Implementation}
 \label{sec:implementation}
 
 \textit{from coursework spec:} design and implementation of the system: components and architecture
 
-\subsection{State-of-the-art Tools}
-\label{subsec:tools}
-\textit{Explain what tools we'll be using}
+\subsection{Natural Language Understanding}
+\label{subsec:nlu}
+
+\subsection{Dialogue Management}
+\label{subsec:dialogue_management}
+
+\subsection{Natural Language Generation}
+\label{subsec:nlg}
 
 
 \section{Evaluation}
@@ -102,6 +110,17 @@ In dyadic conversations, there are only two roles a participant can take: speake
 
 \textit{from coursework spec:} evaluation of the system and presentation of the results
 
+\subsection{Methodology}
+\label{subsec:methodology}
+
+\subsection{Experiment Layout}
+\label{subsec:experiment_layout}
+
+\subsection{Results}
+\label{subsec:results}
+
+\section{Conclusion}
+\label{sec:conclusion}
 
 \section{Future Work}
 \label{sec:future_work}
