adds structure and points to mention in each section

--- a/report/report.tex
+++ b/report/report.tex
@@ -88,18 +88,37 @@ In dyadic conversations, there are only two roles a participant can take: speake
 
 \section{Data Collection}
 \label{sec:data_collection}
-\textit{Talk about multi-party data collection -> lack of human-robot multi-party data corpus?}
+
+\begin{itemize}
+  \item Talk about multi-party data collection
+  \item There’s a need to collect data of multi-party human robot interaction because there’s proof that humans behave differently when they interact with each other vs. interact with a robot.To justify why we still went with human-human data is that there’s only little data available of human-robot interaction and there wasn’t enough time in the period of this project to collect it by ourselves.
+\end{itemize}
 
 \section{Design and Implementation}
 \label{sec:implementation}
 
-\textit{from coursework spec:} design and implementation of the system: components and architecture
+\begin{itemize}
+  \item \textit{from coursework spec:} design and implementation of the system: components and architecture
+  \item Jack's System Graph
+\end{itemize}
 
 \subsection{Natural Language Understanding}
 \label{subsec:nlu}
 
+\begin{itemize}
+  \item Description of RASA
+  \item Different versions of the model: show difference in F-Score
+\end{itemize}
+
 \subsection{Dialogue Management}
 \label{subsec:dialogue_management}
+
+\begin{itemize}
+  \item Clearly explain 2 parts (State-Machine and NN)
+  \item State-Machine: high-level control, handles things we have no data for, eg. pauses
+  \item NN: Report on differences between RNN and LSTM and why the choice for the LSTM has been made
+  \item (optional): Comparison to RASA rule-policy
+\end{itemize}
 
 \subsection{Natural Language Generation}
 \label{subsec:nlg}
@@ -121,6 +140,9 @@ In dyadic conversations, there are only two roles a participant can take: speake
 
 \section{Conclusion}
 \label{sec:conclusion}
+
+\subsection{Ethical Reflection}
+\label{subsec:ethics}
 
 \section{Future Work}
 \label{sec:future_work}
