adds to report structure

--- a/report/report.tex
+++ b/report/report.tex
@@ -108,13 +108,23 @@ In dyadic conversations, there are only two roles a participant can take: speake
   \item Jack's System Graph
 \end{itemize}
 
+\subsection{Automatic Speech Recognition}
+\label{subsec:asr}
+
+\begin{itemize}
+  \item (Laura) Previous research, difficulties of ASR
+  \item (Charlie \& Jason) Difficulties and choice of ASR (why Google over others?)
+  \item (Charlie \& Jason) Chosen set-up
+\end{itemize}
+
 \subsection{Natural Language Understanding}
 \label{subsec:nlu}
 
 \begin{itemize}
-  \item Very short escription of RASA
+  \item Short description of RASA
+  \item Explain the aim (detecting intents)
   \item Refer to the intents described in \ref{sec:data_collection} \nameref{sec:data_collection}
-  \item Different versions of the model: show difference in F-Score, Confusion Matrix, ... (Laura: look up in literature what is used, what should be used)
+  \item Evaluation - show different versions of the model: difference in F-Score, Confusion Matrix, ...
 \end{itemize}
 
 \subsection{Dialogue Management}
